--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -5,19 +5,19 @@
 
 <form action="{% url 'auctions:create' %}" method="post">
     {% csrf_token %}
-    <div class="form-group">
+    <div class="form-group mb-3">
         {{ newListingForm.title }}
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
         {{ newListingForm.description }}
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
         {{ newListingForm.startingBid }}
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
         {{ newListingForm.imageURL }}
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
         {{ newListingForm.category }}
     </div>
     <input class="btn btn-primary" type="submit" value="Create new listing">
