--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,18 +1,32 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-<h2>Active Listings</h2>
+<div class="container">
+    <h2>Active Listings</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        {% for auction in auctions %}
+        <div class="col">
+            <div class="card h-100">
+                <img class="card-img-top" src="{{ auction.imageURL }}" alt="Card image cap">
+                <div class="card-body">
+                    <h3 class="card-text">{{ auction.title }}</h3>
+                    {% if auction.currentBid %}
+                    <h5 class="card-title">${{ auction.currentBid.amount }}</h5>
+                    {% else %}
+                    <h5 class="card-title">${{ auction.startingBid }}</h5>
+                    {% endif %}
+                    <p class="card-text">{{ auction.description }}</p>
+                    <a href="{% url 'auctions:auction' auction.pk %}" class="btn btn-primary">More details...</a>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Posted by: {{ auction.lister.username }}</small>
+                </div>
+            </div>
+        </div>
 
-{% for auction in auctions %}
-
-<div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="{{ auction.imageURL }}" alt="Card image cap">
-    <div class="card-body">
-        <h5 class="card-title">{{ auction.title }}</h5>
-        <p class="card-text">{{ auction.description }}</p>
-        <a href="#" class="btn btn-primary">More details...</a>
+        {% empty %}
+        <h3>No actve listings yet. :\</h3>
+        {% endfor %}
     </div>
 </div>
-
-{% endfor %}
 {% endblock %}
